<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.camera.CameraActivity">

    <LinearLayout
        android:id="@+id/ll_action_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:src="@drawable/sc_logo2"
            android:layout_marginStart="16dp"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_bottom_nav_home"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_home"
            app:layout_constraintEnd_toStartOf="@id/btn_camera"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="110dp"
            android:contentDescription="@string/home" />

        <ImageView
            android:id="@+id/btn_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera_plus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/kamera"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/btn_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_user"
            android:layout_marginStart="110dp"
            app:layout_constraintStart_toEndOf="@id/btn_camera"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/profil"/>

        <ImageView
            android:id="@+id/btn_camera_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera_plus_selected"
            app:layout_constraintTop_toTopOf="@id/btn_camera"
            app:layout_constraintBottom_toBottomOf="@id/btn_camera"
            app:layout_constraintStart_toStartOf="@id/btn_camera"
            app:layout_constraintEnd_toEndOf="@id/btn_camera"
            android:contentDescription="@string/explore"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_picture"
        android:layout_width="380dp"
        android:layout_height="380dp"
        app:layout_constraintTop_toBottomOf="@id/ll_action_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_place_holder_image" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_scan"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/pindai"
        android:fontFamily="@font/poppins_medium"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/custom_btn_navy"
        android:drawableStart="@drawable/ic_scan_white"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textAllCaps="false"/>

    <TextView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/ambil_gambar_dari_kamera_atau_galeri_lalu_tekan_pindai"
        app:layout_constraintTop_toBottomOf="@id/btn_scan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_regular"
        android:textAlignment="center"
        android:textColor="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/ll_bottom_nav_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_open_gallery"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/galeri"
            android:fontFamily="@font/poppins_medium"
            android:textSize="20sp"
            android:background="@drawable/custom_btn_white"
            android:textColor="@color/navy"
            android:drawableStart="@drawable/ic_take_gallery"
            android:drawablePadding="6dp"
            android:paddingStart="12dp"
            android:paddingEnd="6dp"
            android:textAllCaps="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_open_camera"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/kamera"
            android:fontFamily="@font/poppins_medium"
            android:textSize="20sp"
            android:background="@drawable/custom_btn_white"
            android:textColor="@color/navy"
            android:drawableStart="@drawable/ic_take_camera"
            android:drawablePadding="6dp"
            android:paddingStart="12dp"
            android:paddingEnd="6dp"
            android:layout_marginStart="12dp"
            android:textAllCaps="false"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>