<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.result.ResultActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/ll_action_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/white"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:src="@drawable/sc_logo2"
                android:layout_marginStart="16dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_wait"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:text="@string/gambar_anda_sedang_dianalisis_mohon_tunggu_sebentar"
            app:layout_constraintTop_toBottomOf="@id/ll_action_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/green"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:visibility="invisible"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_wait"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tv_hasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_action_bar"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/hasil"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/navy"
            android:textSize="32sp"
            android:visibility="visible"/>

        <ImageView
            android:id="@+id/iv_picture_result"
            android:layout_width="380dp"
            android:layout_height="380dp"
            app:layout_constraintTop_toBottomOf="@id/tv_hasil"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_place_holder_image" />

        <TextView
            android:id="@+id/tv_objects_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1 objek terdeteksi"
            app:layout_constraintTop_toBottomOf="@id/iv_picture_result"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/navy" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_object_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn_white"
            app:layout_constraintTop_toBottomOf="@id/tv_objects_count"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:drawableEnd="@drawable/ic_chevron_right"
            tools:text="Badak"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_regular"
            android:textSize="20sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>


        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/btn_object_result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="start|top"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="6dp"
            android:textSize="12sp"
            android:textColor="@color/green"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/tambahkan_deskripsi"
            android:inputType="textCapSentences|textMultiLine"
            android:scrollbars="vertical"
            android:overScrollMode="never"
            android:maxLength="255"
            android:textColorHint="#8D6E63"
            tools:layout_editor_absoluteX="8dp"
            android:autofillHints="deskripsi"
            android:fontFamily="@font/poppins_regular"
            android:background="@drawable/custom_btn_white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/simpan"
                android:fontFamily="@font/poppins_medium"
                android:textSize="20sp"
                android:background="@drawable/custom_btn_navy"
                android:textColor="@color/white"
                android:drawableStart="@drawable/ic_save_02"
                android:drawablePadding="6dp"
                android:paddingStart="12dp"
                android:paddingEnd="6dp"
                android:textAllCaps="false"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_upload"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/unggah"
                android:fontFamily="@font/poppins_medium"
                android:textSize="20sp"
                android:background="@drawable/custom_btn_navy"
                android:textColor="@color/white"
                android:drawableStart="@drawable/ic_upload_02"
                android:drawablePadding="6dp"
                android:paddingStart="12dp"
                android:paddingEnd="6dp"
                android:layout_marginStart="12dp"
                android:textAllCaps="false"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>